# kiscSigner

./: CMakeLists.txt  README.md  main.cpp
include/: base64.h  cptumar.h  loadTcsp.h  signData.h  tdefs.h  wdefs.h
src/: loadTcsp.cpp  signData.cpp
